# lava

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
crates/lava/: Cargo.toml  README.md
crates/lava-core/: Cargo.toml  README.md
crates/lava-core/queries/: highlights.scm  locals.scm  topiary.scm
crates/lava-core/src/: error.rs  format.rs  highlight.rs  lib.rs  magma.scm  queries.rs  testing.rs
crates/lava-core/tests/: topiary_corpus.rs
crates/lava-core/tests/topiary-tests/expected/: anonymous_function.m  assert_statement.m  boolean_operators.m  break_continue.m  break_continue_labeled.m  comprehensions.m  constructor_pipe.m  constructors.m  control_flow.m  declare.m  elif_chain.m  expressions.m  for_quantifier.m  forward_and_where_is.m  functions.m  if_empty_consequence.m  intrinsic_arrow.m  map_constructor.m  multiline_args.m  optional_args_call.m  print_eval_break.m  read_exit.m  require_statement.m  ternary_and_error_if.m  tight_operators.m  time_statement.m  top_level_blanks.m  typed_params.m  unary_assigned.m  vtime_statement.m  where_clauses.m  word_binary_operators.m
crates/lava-core/tests/topiary-tests/input/: anonymous_function.m  assert_statement.m  boolean_operators.m  break_continue.m  break_continue_labeled.m  comprehensions.m  constructor_pipe.m  constructors.m  control_flow.m  declare.m  elif_chain.m  expressions.m  for_quantifier.m  forward_and_where_is.m  functions.m  if_empty_consequence.m  intrinsic_arrow.m  map_constructor.m  multiline_args.m  optional_args_call.m  print_eval_break.m  read_exit.m  require_statement.m  ternary_and_error_if.m  tight_operators.m  time_statement.m  top_level_blanks.m  typed_params.m  unary_assigned.m  vtime_statement.m  where_clauses.m  word_binary_operators.m
crates/lava/src/: cli.rs  main.rs
crates/lava/src/cmd/: format.rs  highlight.rs  mod.rs  parse.rs  test.rs
crates/lava/tests/: cli.rs
