[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/havarddj/lava"

[workspace.dependencies]
tree-sitter-magma = { git = "https://github.com/edgarcosta/tree-sitter-magma.git", rev = "023de2f5366bfd4d7435f87313e8e8b187ac5997" }
