[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/havarddj/lava"

[workspace.dependencies]
tree-sitter-magma = { git = "https://github.com/edgarcosta/tree-sitter-magma.git", rev = "75b31f4695261967c7aa87d552d69805dc03c77b" }
