[package]
name = "lava-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "lava: a community-maintained multi-tool for the Magma language"

[[bin]]
name = "lava"
path = "src/main.rs"

[dependencies]
lava-core = { path = "../lava-core" }
clap = { version = "4", features = ["derive", "wrap_help"] }
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tempfile = "3"
ignore = "0.4"
similar = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
